add report picture, fix bug cal F1 score when there is no detection alarms

--- a/TIRE_workflow.ipynb
+++ b/TIRE_workflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "'eeg_dmd'"
+       "'original'"
       ]
      },
      "execution_count": 2,
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +91,8 @@
      "output_type": "stream",
      "text": [
       "training\n",
-      "timeseries shape: (1665853,)\n",
-      "call breakpoint\n",
-      "testing\n",
-      "timeseries shape: (374523,)\n"
+      "timeseries shape: (27033,)\n",
+      "call breakpoint\n"
      ]
     }
    ],
@@ -102,19 +100,39 @@
     "# training\n",
     "series = 1\n",
     "print('training')\n",
-    "training_timeseries, training_timeseries_len, training_windows_TD, training_windows_FD = workflow.get_timeseries(f'../data/eeg_grasp_and_lift/dataset{series}_training_data.csv')\n",
+    "training_timeseries, training_timeseries_len, training_windows_TD, training_windows_FD = workflow.get_timeseries(f'../data/jumpmean-training-data.csv')\n",
     "print('call breakpoint')\n",
-    "training_breakpoints = workflow.get_breakpoint(training_timeseries_len, f'../data/eeg_grasp_and_lift/dataset{series}_training_label.csv')\n",
+    "training_breakpoints = workflow.get_breakpoint(training_timeseries_len, f'../data/jumpmean-training-label.csv')\n",
     "\n",
     "# # validation\n",
     "# print('validation')\n",
     "# validation_timeseries, validation_timeseries_len, validation_windows_TD, validation_windows_FD = workflow.get_timeseries(f'../data/eeg_grasp_and_lift/dataset{series}_validation_data.csv')\n",
     "# validation_breakpoints = workflow.get_breakpoint(validation_timeseries_len, f'../data/eeg_grasp_and_lift/dataset{series}_validation_label.csv')\n",
     "\n",
-    "# testing\n",
-    "print('testing')\n",
-    "testing_timeseries, testing_timeseries_len, testing_windows_TD, testing_windows_FD = workflow.get_timeseries(f'../data/eeg_grasp_and_lift/dataset{series}_testing_data.csv')\n",
-    "testing_breakpoints = workflow.get_breakpoint(testing_timeseries_len, f'../data/eeg_grasp_and_lift/dataset{series}_testing_label.csv')"
+    "# # testing\n",
+    "# print('testing')\n",
+    "# testing_timeseries, testing_timeseries_len, testing_windows_TD, testing_windows_FD = workflow.get_timeseries(f'../data/eeg_grasp_and_lift/dataset{series}_testing_data.csv')\n",
+    "# testing_breakpoints = workflow.get_breakpoint(testing_timeseries_len, f'../data/eeg_grasp_and_lift/dataset{series}_testing_label.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((27033,), (26834,))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_timeseries.shape, training_breakpoints.shape"
    ]
   },
   {
