--- a/t-test.ipynb
+++ b/t-test.ipynb
@@ -9,34 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "Bigsimr not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Minh Nhat\\Downloads\\DCU\\Practicum\\TIRE-custom\\test.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000001?line=4'>5</a>\u001b[0m jl \u001b[39m=\u001b[39m Julia(runtime\u001b[39m=\u001b[39mjpath, compiled_modules\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000001?line=5'>6</a>\u001b[0m \u001b[39m# jl = Julia(compiled_modules=False) # conda users -> set to False\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000001?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mjulia\u001b[39;00m \u001b[39mimport\u001b[39;00m Bigsimr \u001b[39mas\u001b[39;00m bs\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mjulia\u001b[39;00m \u001b[39mimport\u001b[39;00m Distributions \u001b[39mas\u001b[39;00m dist\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000001?line=10'>11</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Minh Nhat\\.conda\\envs\\ml\\lib\\site-packages\\julia\\core.py:260\u001b[0m, in \u001b[0;36mJuliaModuleLoader.load_module\u001b[1;34m(self, fullname)\u001b[0m\n\u001b[0;32m    256\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mjulia\u001b[39m.\u001b[39misamodule(juliapath):\n\u001b[0;32m    257\u001b[0m         \u001b[39mreturn\u001b[39;00m sys\u001b[39m.\u001b[39mmodules\u001b[39m.\u001b[39msetdefault(fullname,\n\u001b[0;32m    258\u001b[0m                                       JuliaModule(\u001b[39mself\u001b[39m, fullname))\n\u001b[1;32m--> 260\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m not found\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(juliapath))\n",
-      "\u001b[1;31mImportError\u001b[0m: Bigsimr not found"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repeatable test: [8, 8, 6]\n",
+      "Repeatable test: [8, 8, 6]\n",
+      "Repeatable test: [8, 8, 6]\n",
+      "Repeatable test: [8, 8, 6]\n"
      ]
     }
    ],
    "source": [
-    "from julia.api import Julia\n",
-    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "np.random.seed(2)\n",
+    "def test():\n",
+    "    np.random.seed(2)\n",
+    "    print(\"Repeatable test:\", [np.random.randint(10) for i in range(3)])\n",
     "\n",
-    "jpath = Path(\"C://Users/Minh Nhat/AppData/Local/Programs/Julia-1.7.3/bin/julia.exe\") # path to Julia, from current directory (your path may be slightly different)\n",
-    "jl = Julia(runtime=jpath, compiled_modules=False)\n",
-    "# jl = Julia(compiled_modules=False) # conda users -> set to False\n",
-    "\n",
-    "from julia import Bigsimr as bs\n",
-    "from julia import Distributions as dist\n",
-    "\n",
-    "import numpy as np"
+    "n_loop = 4\n",
+    "# max_rand_int = 1000*n_loop # i think this is enough\n",
+    "# seeds = np.random.randint(max_rand_int, size=n_loop) # make list of seeds\n",
+    "for i in range(n_loop):\n",
+    "    test()\n",
+    "    # np.random.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EEG TD"
    ]
   },
   {
@@ -45,30 +51,129 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "JuliaNotFound",
-     "evalue": "Julia executable `julia` cannot be found.\n\nIf you have installed Julia, make sure Julia executable is in the\nsystem PATH.  Alternatively, specify file path to the Julia executable\nusing `julia` keyword argument.\n\nIf you have not installed Julia, download Julia from\nhttps://julialang.org/downloads/ and install it.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mJuliaNotFound\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Minh Nhat\\Downloads\\DCU\\Practicum\\TIRE-custom\\test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000004?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbigsimr\u001b[39;00m \u001b[39mimport\u001b[39;00m setup\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Minh%20Nhat/Downloads/DCU/Practicum/TIRE-custom/test.ipynb#ch0000004?line=1'>2</a>\u001b[0m setup(compiled_modules\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
-      "File \u001b[1;32mc:\\Users\\Minh Nhat\\.conda\\envs\\ml\\lib\\site-packages\\bigsimr\\setup.py:6\u001b[0m, in \u001b[0;36msetup\u001b[1;34m(compiled_modules)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msetup\u001b[39m(compiled_modules\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m----> 6\u001b[0m     julia\u001b[39m.\u001b[39;49minstall()\n\u001b[0;32m      7\u001b[0m     jl \u001b[39m=\u001b[39m Julia(compiled_modules\u001b[39m=\u001b[39mcompiled_modules)\n\u001b[0;32m      9\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mjulia\u001b[39;00m \u001b[39mimport\u001b[39;00m Pkg\n",
-      "File \u001b[1;32mc:\\Users\\Minh Nhat\\.conda\\envs\\ml\\lib\\site-packages\\julia\\tools.py:78\u001b[0m, in \u001b[0;36minstall\u001b[1;34m(julia, color, python, quiet)\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     62\u001b[0m \u001b[39minstall(*, julia=\"julia\", color=\"auto\")\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \u001b[39mInstall Julia packages required by PyJulia in `julia`.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[39m    automatically.\u001b[39;00m\n\u001b[0;32m     76\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     77\u001b[0m \u001b[39mif\u001b[39;00m which(julia) \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 78\u001b[0m     \u001b[39mraise\u001b[39;00m JuliaNotFound(julia, kwargname\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mjulia\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     80\u001b[0m libpython \u001b[39m=\u001b[39m linked_libpython() \u001b[39mor\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     82\u001b[0m julia_cmd \u001b[39m=\u001b[39m [julia, \u001b[39m\"\u001b[39m\u001b[39m--startup-file=no\u001b[39m\u001b[39m\"\u001b[39m]\n",
-      "\u001b[1;31mJuliaNotFound\u001b[0m: Julia executable `julia` cannot be found.\n\nIf you have installed Julia, make sure Julia executable is in the\nsystem PATH.  Alternatively, specify file path to the Julia executable\nusing `julia` keyword argument.\n\nIf you have not installed Julia, download Julia from\nhttps://julialang.org/downloads/ and install it.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.056265768355072916, pvalue=0.47796260940330654)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from bigsimr import setup\n",
-    "import julia\n",
-    "from julia.api import Julia\n",
+    "l2_norm_td = [0.49141,\t0.46969,\t0.38749,\t0.58126,\t0.42441,\t0.40478,\t0.56076,\t0.54146]\n",
     "\n",
-    "julia.install()\n",
-    "jl = Julia(compiled_modules=False)\n",
+    "dmd = [0.47523427,\t0.46808,\t0.37994723,\t0.581818182,\t0.415316642,\t0.400240385,\t0.584662111,\t0.573875803]\n",
     "\n",
-    "from julia import Pkg\n",
-    "Pkg.add(\"Bigsimr\") # Lock to specific version for stability\n",
-    "Pkg.add(\"Distributions\") # Install Distributions after Bigsimr"
+    "ica_l2 = [0.469781931,\t0.461818182,\t0.388359788,\t0.578633046,\t0.392258065,\t0.376645678,\t0.573938507,\t0.55563331]\n",
+    "\n",
+    "import scipy.stats as stats \n",
+    "stats.ttest_ind(l2_norm_td, dmd, alternative='less')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-3.4365374280399164, pvalue=0.0014716524536884511)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# jumpmean diff magnitude \n",
+    "l2 = [0.543209877,\t0.684684685,\t0.586956522,\t0.601941748,\t0.615384615,\t0.689655172,\t0.578125,\t0.62745098,\t0.59770114,\t0.615384615]\n",
+    "\n",
+    "dmd = [0.778947368,\t0.74226804,\t0.701298701,\t0.729166666,\t0.67368421,\t0.65,\t0.58536585,\t0.62650602,\t0.744186047,\t0.73563218]\n",
+    "\n",
+    "import scipy.stats as stats \n",
+    "\n",
+    "stats.ttest_ind(l2, dmd, alternative='less')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "file_path = './data/jumpmean-ar-5-noise/original_l2/dissimilarities_dataset1_original_l2_alpha/dissimilarities_FD.txt'\n",
+    "dissimilarities = np.loadtxt(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(dissimilarities).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([0.0, 0, 0])\n",
+    "a.sum() == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.10887427585025465, pvalue=0.9145067476109924)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "mean1, std1, nobs1 = 0.486, 0.077, 10\n",
+    "mean2, std2, nobs2 = 0.482, 0.087, 10\n",
+    "\n",
+    "# alternative{‘two-sided’, ‘less’, ‘greater’}\n",
+    "stats.ttest_ind_from_stats(mean1, std1, nobs1, mean2, std2, nobs2)"
    ]
   }
  ],
